src/panels/Menu.css
html {
  scroll-behavior: smooth;
}

.header__images {
  height: 212px
}

.header__cover {
  height:  170px;
}

.header__avatar {
  position: relative;
  left: calc(50% - 40px);
  top: -40px;
}

.header__avatar .Avatar__img {
  border: 2px solid var(--background_content);
}

.header__settings {
  position: fixed;
  left: calc(100% - 44px);
  top: 14px;
}

.header__text {
  width: 100%;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.header__title {
  margin-top: 14px;
}

.header__open {
  color: var(--text_secondary);
  margin-bottom: 14px;
}

.position__bottom {
  display: flex;
  align-items: baseline;
}

.position__value, .position-desktop__description {
  color: var(--text_secondary);
}

.position .RichCell__text {
  color: var(--text_secondary);
}

.position-list_desktop {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
  align-content: space-between;
  padding: 8px 16px;
}

.position-desktop {
  width: 190px;
  display: flex;
  flex-direction: column;
}

.position-desktop__description {
  padding-top: 3px;
}

.position-desktop__title {
  padding-top: 13px;
}

.position__bottom_desktop {
  padding-top: 6px;
}

.header__tabs_desktop {
  margin-left: 20px;
}

.header__separator_desktop {
  padding-left: 0;
  padding-right: 0;
}

